<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".aktywnosci.MainActivity">
<LinearLayout
    android:padding ="16dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/W_Maila"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LogPass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/W_Haslo"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/LoginButton"
        android:layout_marginVertical="10dp"
        android:minHeight="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Logowanie" />
    <Button
        android:id="@+id/RegisterButton2"
        android:minHeight="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rejestracja" />


</LinearLayout>
</ScrollView>

