<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".aktywnosci.RegistrationActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/fui_ic_mail_white_24dp"
        app:endIconMode="clear_text"
        app:helperTextTextColor="#FB1100"
        app:boxBackgroundColor="#3603A9F4"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/W_Maila"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegNumPhon"
        app:startIconDrawable="@drawable/fui_ic_phone_white_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="#FB1100"
        app:boxBackgroundColor="#3603A9F4"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/W_Tel"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="#FB1100"
        app:boxBackgroundColor="#3603A9F4"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/W_Haslo"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/RegPassRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperTextTextColor="#FB1100"
        app:boxBackgroundColor="#3603A9F4"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PWH_Haslo"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rejestracja"/>
</LinearLayout>