<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/takeFragment_Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="50dp">

    <TextView
        android:id="@+id/networkConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableEnd="@drawable/ic_baseline_signal_wifi_off_24"
        android:drawablePadding="20dp"
        android:hint="@string/Network"
        android:visibility="visible" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/languageSelection"
        app:startIconDrawable="@drawable/ic_baseline_language_24">

        <AutoCompleteTextView
            android:id="@+id/languageSelection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:inputType="none"
            android:text="@string/polski"/>

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="100dp">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp">
        <TextView
            android:id="@+id/textViewDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DarkMode"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_baseline_brightness_3_24"
            app:layout_row="0"
            app:layout_column="0"
            android:paddingVertical="15dp"
            />

        <TextView
            android:id="@+id/textViewNotyfication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notyfication"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_baseline_notifications_24"
            app:layout_row="1"
            app:layout_column="0"
            android:paddingVertical="15dp"
            />
        <Switch
            android:id="@+id/switchDarkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="0"
            app:layout_column="2"
           />

        <Switch
            android:id="@+id/switchNotyfication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="1"
            app:layout_column="2"
            />
        <TextView
            android:id="@+id/textViewSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SMS"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_baseline_sms_24"
            app:layout_row="2"
            app:layout_column="0"
            android:paddingVertical="15dp"
            />
        <Switch
            android:id="@+id/switchSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_row="2"
            app:layout_column="2"
            />
    </androidx.gridlayout.widget.GridLayout>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="260dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:hint="Imie"/>

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />

    </FrameLayout>
</FrameLayout>